# Assigment-1-ADS-

./: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.1.cpp  task7.2.cpp  task7.3.cpp  task7.4.cpp  task7.cpp  task8.cpp
