cmake_minimum_required(VERSION 4.2)
project(untitled1)

set(CMAKE_CXX_STANDARD 20)

add_executable(task1 task1.cpp)
add_executable(task2 task2.cpp)
add_executable(task3 task3.cpp)
add_executable(task4 task4.cpp)
add_executable(task5 task5.cpp)
add_executable(task6 task6.cpp)
add_executable(task7 task7.cpp)
add_executable(task7.1 task7.1.cpp)
